testsuite/poke.pkl/struct-ind-diag-4.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    offset<int<32>,B,int> foo;
  };

(Foo {})->foo + 2#B; /* { dg-error "invalid operand.*\n.*expected integral" } */
